--- a/css/music.css
+++ b/css/music.css
@@ -30,6 +30,18 @@ body{
     border-radius: 3px 3px;
     box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.234);
 }
+
+
+.info h4{
+    margin-top: 10px;
+    color: white;
+    text-align: center;
+    font-size: 13px;
+}
+.info h4 span{
+    font-size: 12px;
+    color: rgb(150, 150, 157);
+}
 .controls{
     display: flex;
     justify-content: center;
@@ -40,11 +52,18 @@ body{
     line-height: 0px;
     font-size: 25px;
     cursor: pointer;
-    padding-top: 5px;
+    margin-bottom: 20px;
     background: none;
     
-    
 
+}
+
+.controls .step{
+    display: flex;
+    align-items: center;
+    
+    padding:0 20px;
+    font-size: 17px;
 }
 
 .player{
@@ -65,8 +84,8 @@ body{
     width: 90%;
     height: 10px;
     background-color: rgba(158, 177, 177, 0.849);
-    /* box-shadow: 5px 5px 5px grey; */
-    margin-top:30px 20px;
+    border-radius: 2px;
+    margin-top:5px;
     cursor: pointer;
 
 }
@@ -95,6 +114,17 @@ body{
 .showLyric{
     color: white;
     text-align: center;
+    position: relative;
+    top: 0;
+    left: 0;
+}
+.showLyric span{
+    position: absolute;
+    top: 0;
+    left: auto;
+    right: auto;
+    bottom: 0;
+    z-index: 100;
 }
 
 
