--- a/css/music.css
+++ b/css/music.css
@@ -31,15 +31,21 @@ body{
     box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.234);
 }
 
+.info{
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
+}
+
 
 .info h4{
-    margin-top: 10px;
+    
     color: white;
     text-align: center;
-    font-size: 13px;
+    font-size: 16px;
 }
-.info h4 span{
-    font-size: 12px;
+.info span{
+    font-size: 15px;
     color: rgb(150, 150, 157);
 }
 .controls{
