--- a/css/music.css
+++ b/css/music.css
@@ -134,3 +134,50 @@ body{
 }
 
 
+
+
+@media screen and (max-width:1024px){
+   
+
+    .img-thumbnail{
+        width: 300px;
+        align-items: center;
+        margin: 0 auto;
+    }
+
+    .progress-bar{
+        width: 50%;
+        margin: 0 auto;
+    }
+
+    .info{
+        align-items: center;
+    }
+}
+
+
+@media screen and (max-width:450px){
+    .container{
+        width: 90%;
+        height: 1000px;
+        margin: 200px auto;
+    }
+
+    .img-thumbnail{
+        width: 300px;
+        align-items: center;
+        /* margin-right: 100px; */
+        padding-right: 20px;
+    }
+
+    .progress-bar{
+        width: 40%;
+        margin: 0 auto;
+        
+    }
+
+    .info{
+        position: relative;
+        top: -200px;
+    }
+}
